--- a/Css/style.css
+++ b/Css/style.css
@@ -3,9 +3,9 @@
 :root{
     --cor0:white;
     --cor1:#e6e6e6;
-    --cor2:#4e4e4e;
-    --cor3:#2FA866;
-    --cor4:#1A5C37;
+    --cor2:#acaaaa;
+    --cor3:#4e4e4e;
+    --cor4:#3a3939;
     --cor5:#f7b600;}
 
 *{
@@ -16,7 +16,7 @@
 body{
     font-size: 1em;
     font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-    background: var(--cor1)
+    background: var(--cor0)
 }
 
 /*
@@ -33,6 +33,49 @@ header{
     padding: 10px;
 }
 
+main{
+    width: 920px;
+    margin: auto;
+    padding: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.329);
+}
+
+#posts{
+    width: 660px;
+    background: var(--cor0);
+    float: left;
+}
+
+#side-bar{
+    width: 240px;
+    float: right;
+}
+
+.post{
+    padding: 20px;
+    margin-bottom: 20px;
+    background: var(--cor0);
+}
+
+.side-content{
+    padding: 20px;
+    margin-bottom: 20px;
+    background: var(--cor0);
+} 
+
+.side-post{
+    font-size: 0.8em;
+    padding: 5px;
+    border-bottom: 1px dotted var(--cor4);
+}
+
+footer{
+    clear: both;
+    background: var(--cor2);
+    text-align: center;
+    padding: 15px;
+}
+
 /*
 ***Formatação do Menu***
 */
@@ -42,15 +85,27 @@ a{
     transition-duration: 0.5s;
     
 }
-a:link, a:visited{
+
+a:link,  a:visited{
+    color: var(--cor5);
+
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+
+header a:link, header a:visited{
     color: var(--cor0);
     padding: 10px;
 
 }
 
-a:hover{
+header a:hover{
     background-color: var(--cor0);
-    color: var(--cor5); 
+    color: var(--cor5);
+    text-decoration: none;
 }
 
 
@@ -59,10 +114,31 @@ a:hover{
 */
 
 h1{
-    color: var(--cor2);
+    color: var(--cor3);
     font-weight: 2.5em;
 }
 
-.branco{
+h2{
+    color: var(--cor5);
+}
+
+h3{
+    color: var(--cor4);
+    background: var(--cor2);
+    padding: 5px;
+}
+
+.white{
     color: var(--cor0);
+}
+
+.time{
+    font-size: 0.8em;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.clear{
+    clear: both;
 }
